<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/groupMain">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_cv_person"
            android:title="@string/drawer_profile" />

        <item
            android:id="@+id/nav_vn_received"
            android:icon="@drawable/ic_vn_inbox"
            android:title="@string/vn_received" />

        <item
            android:id="@+id/nav_vn_send"
            android:icon="@drawable/ic_vn_mic"
            android:title="@string/vn_send" />

        <item
            android:id="@+id/nav_voice"
            android:icon="@drawable/ic_cv_volume"
            android:title="@string/drawer_voice" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_cv_settings"
            android:title="@string/drawer_settings" />
    </group>

    <group android:id="@+id/groupAccount">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_cv_logout"
            android:title="@string/drawer_logout" />
    </group>

</menu>
